# subnet-intelligence

./: .coverage  .env.example  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
api/: dependencies.py  main.py  models.py
backtests/: engine.py  proxies.py
collectors/: __init__.py  models.py
data/: github_map_overrides.json  subnet_name_overrides.json  subnet_names.json
docs/: AUDIT_REPORT.md  INVESTMENT_FRAMEWORK_MIGRATION.md  live_model_validation.md  scoring-model-v2.md
explain/: __init__.py  engine.py
features/: components_confidence.py  components_fragility.py  components_opportunity.py  components_quality.py  conditioning.py  metrics.py  model_v2.py  normalization.py  types.py
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts
labels/: __init__.py  engine.py
regimes/: __init__.py  hard_rules.py
scorer/: bittensor_client.py  coingecko_client.py  composite.py  database.py  external_data_snapshot.py  github_client.py  name_resolver.py  normalizer.py  run.py  scheduler.py  signals.py  subnet_github_mapper.py  taostats_client.py
scoring/: engine.py
storage/: __init__.py  history.py
stress/: __init__.py  scenarios.py
tests/: test_api.py  test_backtests_engine.py  test_bittensor_client.py  test_composite_and_scheduler.py  test_database.py  test_external_data_snapshot.py  test_feature_normalization.py  test_github_client.py  test_regimes_and_labels.py  test_run.py  test_scoring_engine.py  test_signals.py  (+2 more)
(+57 files in other folders)
